--- a/public/footer.html
+++ b/public/footer.html
@@ -16,7 +16,7 @@
       <table width="1024" height="15" cellpadding="0" align="center" class="border" bgcolor="#336666">
          <tr> 
              <td align="left"> 
-                  <font style="margin-left:5px;">design by Bay</font>
+                  <font style="margin-left:5px;">design by Group09</font>
              </td>
          </tr>
       </table>
