--- a/public/main.html
+++ b/public/main.html
@@ -19,17 +19,18 @@
                   <table width="238" height="465" celpadding="0" bgcolor="#20b2aa">
                       <tr valign="top">
                            <td align="center">
-                              <img src="img/01.jpg" width="236" height="300" style="border:1px solid #ffd700; padding:3px;"> <br> <font size="3"><u>AU</u></font> <br>
-                                40% discount <br>
+                              <img src="img/1.jpg" width="236" height="300" style="border:1px solid #ffd700; padding:3px;"> <br> <font size="3"><u>EMG/AW JW3 STI/TTI </u></font> <br>
+                                10% discount <br>
                                 The best sell<br>
-                                only 270 Bath
+                                only 5800 Bath
                             
                         </td>
                        </tr>
                       <tr>
                            <td align="center">
                               <ul>
-                                 <li><a href="page1.html" target="main">BUY NOW</a></li>
+                                 <li><a href="page5.html" target="main">BUY NOW</a></li>
+                                 
                               </ul>
                            </td>
                       </tr>
@@ -39,16 +40,16 @@
                   <table width="238" height="465" celpadding="0" bgcolor="#20b2aa">
                       <tr valign="top">
                            <td align="center">
-                              <img src="img/4.jpg" width="236" height="300" style="border:1px solid #ffd700; padding:3px;"> <br> <font size="3"><u>DU</u></font> <br>
-                              10% discount <br>
+                              <img src="img/4.jpg" width="236" height="300" style="border:1px solid #ffd700; padding:3px;"> <br> <font size="3"><u>E&L A102 AK Full Steel AEG</u></font> <br>
+                              5% discount <br>
                               The best sell book<br>
-                               only 250 Bath
+                               only 8900 Bath
                            </td>
                        </tr>
                       <tr>
                            <td align="center">
                               <ul>
-                                 <li><a href="page2.html" target="main">BUY NOW</a></li>
+                                 <li><a href="page5.html" target="main">BUY NOW</a></li>
                               </ul>
                            </td>
                       </tr>
@@ -58,16 +59,16 @@
                   <table width="238" height="465" celpadding="0" bgcolor="#20b2aa">
                       <tr valign="top">
                            <td align="center">
-                              <img src="img/5.jpg" width="236" height="300" style="border:1px solid #ffd700; padding:3px;"> <br> <font size="3"><u>QU</u></font> <br>
-                              30% discount <br>
+                              <img src="img/8.jpg" width="236" height="300" style="border:1px solid #ffd700; padding:3px;"> <br> <font size="3"><u>Tokyo Marui M3 Super 90</u></font> <br>
+                              20% discount <br>
                               The best sell supreme<br>
-                              only 2390 Bath
+                              only 8600 Bath
                            </td>
                       </tr>
                       <tr>
                            <td align="center">
                               <ul>
-                                 <li><a href="page3.html" target="main">BUY NOW</a></li>
+                                 <li><a href="page5.html" target="main">BUY NOW</a></li>
                               </ul>
                            </td>
                       </tr>
@@ -77,8 +78,8 @@
                   <table width="238" height="465" celpadding="0" bgcolor="#20b2aa">
                       <tr valign="top">
                            <td align="center">
-                              <img src="img/7.jpg" width="236" height="300" style="border:1px solid #ffd700; padding:3px;"> <br> <font size="3"><u>EU</u></font> <br>
-                              10% discount <br>
+                              <img src="img/12.jpg" width="236" height="300" style="border:1px solid #ffd700; padding:3px;"> <br> <font size="3"><u>ARES LSR-005 M200</u></font> <br>
+                              6% discount <br>
                               The best sell <br>
                               only 21390 Bath
                            </td>
@@ -86,7 +87,7 @@
                       <tr>
                            <td align="center">
                               <ul>
-                                 <li><a href="page4.html" target="main">BUY NOW</a></li>
+                                 <li><a href="page5.html" target="main">BUY NOW</a></li>
                               </ul>
                            </td>
                       </tr>
