--- a/public/manu.html
+++ b/public/manu.html
@@ -18,10 +18,10 @@
              <td align="center"> 
                   <ul>
                       <li><a href="main.html" target="main">Main</a></li>
-                      <li><a href="page1.html" target="main">T-shirt</a></li>
-                      <li><a href="page2.html" target="main">Shoes</a></li>
-                      <li><a href="page3.html" target="main">Book</a></li>
-                      <li><a href="page4.html" target="main">Pants</a></li>
+                      <li><a href="page1.html" target="main">Pistol</a></li>
+                      <li><a href="page2.html" target="main">Assault rifle</a></li>
+                      <li><a href="page3.html" target="main">Shotgun</a></li>
+                      <li><a href="page4.html" target="main">Sniper</a></li>
                   </ul>
              </td>
          </tr>
