--- a/public/top.html
+++ b/public/top.html
@@ -34,11 +34,11 @@
       <table width="1024" height="20" cellpadding="0" align="center" class="border" bgcolor="#afeeee">
          <tr> 
              <td width="250" rowspan="2"> 
-               <center> <font color="#ff1493" size="5">Do you want some T-</font></center>   
+               <center> <font color="#ff1493" size="5"><h2>New arrival  BB-GUN</h2> </font></center>   
              </td>
              <td> 
                   <marquee direction="right">
-                      <img src="img/01.jpg" width="150" height="100" style="border:1px solid #9400b3;">
+                      <img src="img/1.jpg" width="150" height="100" style="border:1px solid #9400b3;">
                       <img src="img/2.jpg" width="150" height="100" style="border:1px solid #9400b3;">
                       <img src="img/3.jpg" width="150" height="100" style="border:1px solid #9400b3;">
                       <img src="img/4.jpg" width="150" height="100" style="border:1px solid #9400b3;">
@@ -47,8 +47,9 @@
                       <img src="img/7.jpg" width="150" height="100" style="border:1px solid #9400b3;">
                       <img src="img/8.jpg" width="150" height="100" style="border:1px solid #9400b3;">
                       <img src="img/9.jpg" width="150" height="100" style="border:1px solid #9400b3;">
+                      <img src="img/10.jpg" width="150" height="100" style="border:1px solid #9400b3;">
+                      <img src="img/11.jpg" width="150" height="100" style="border:1px solid #9400b3;">
                       <img src="img/12.jpg" width="150" height="100" style="border:1px solid #9400b3;">
-                      <img src="img/FG.jpg" width="150" height="100" style="border:1px solid #9400b3;">
                   </marquee>
              </td>
          </tr>
