--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<frameset rows="15%,3%,*,10%,3%" border="0">
+<frameset rows="20%,3%,*,10%" border="0">
     <frame src="top.html" noresize="no" scrolling="no">
     <frame src="manu.html" noresize="no" scrolling="no">
     <frame src="main.html" name="main" noresize="no" scrolling="no">
